[tool.poetry]
name = "link_dealer"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.4"
python-multipart = "^0.0.5"
requests = "^2.27.1"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
types-requests = "^2.27.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
